RESOLVED FIXED 264466
[macOS] Fix keyboard selection/editing of date/time inputs in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=264466
Summary [macOS] Fix keyboard selection/editing of date/time inputs in vertical writin...
Aditya Keerthi
Reported 2023-11-08 23:01:08 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-08 23:01:19 PST
Aditya Keerthi
Comment 2 2023-11-08 23:14:56 PST
EWS
Comment 3 2023-11-09 14:24:03 PST
Committed 270480@main (58847085b32f): <https://commits.webkit.org/270480@main> Reviewed commits have been landed. Closing PR #20217 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.