[macOS] Fix keyboard selection/editing of date/time inputs in vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=264466 rdar://118159670

Reviewed by Wenson Hsieh.

In vertical writing mode, vertical arrow keys should select the next/previous
editable date/time component, and horizontal arrow keys should increment and
decrement the value of the currently selected component.

Update existing keyboard selection/editing tests to include vertical writing
modes.

* LayoutTests/fast/forms/date/date-editable-components/date-editable-components-keyboard-events-expected.txt:
* LayoutTests/fast/forms/date/date-editable-components/date-editable-components-keyboard-events.html:
* LayoutTests/fast/forms/datetimelocal/datetimelocal-editable-components/datetimelocal-editable-components-keyboard-events-expected.txt:
* LayoutTests/fast/forms/datetimelocal/datetimelocal-editable-components/datetimelocal-editable-components-keyboard-events.html:
* LayoutTests/fast/forms/month/month-editable-components/month-editable-components-keyboard-events-expected.txt:
* LayoutTests/fast/forms/month/month-editable-components/month-editable-components-keyboard-events.html:
* LayoutTests/fast/forms/time/time-editable-components/time-editable-components-keyboard-events-expected.txt:
* LayoutTests/fast/forms/time/time-editable-components/time-editable-components-keyboard-events.html:
* Source/WebCore/html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditElement::isFieldOwnerHorizontal const):
* Source/WebCore/html/shadow/DateTimeEditElement.h:
* Source/WebCore/html/shadow/DateTimeFieldElement.cpp:
(WebCore::DateTimeFieldElement::defaultKeyboardEventHandler):
(WebCore::DateTimeFieldElement::isFieldOwnerHorizontal const):
* Source/WebCore/html/shadow/DateTimeFieldElement.h:

Canonical link: https://commits.webkit.org/270480@main